# cv_analyzer

./: .env.template  README.md  docker-compose.yml  dockerfile  pyproject.toml
models/: cv_model.py
prompts/: cv_prompts.py
services/: config.py  cv_evaluator.py  pdf_processor.py
ui/: streamlit_ui.py
